--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
     "@types/lodash": "^4.14.182",
+    "angular-datatables": "^13.1.0",
     "bootstrap": "^5.1.3",
+    "datatables.net": "^1.11.3",
+    "datatables.net-dt": "^1.11.3",
+    "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -32,7 +36,9 @@
     "@angular-devkit/build-angular": "~13.3.5",
     "@angular/cli": "~13.3.5",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.9",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
